--- a/gb/7/4/10/n1673742.md
+++ b/gb/7/4/10/n1673742.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vmhdwv328/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/vmhdwv328/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/vmhdwv328/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/vmhdwv328/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/vmhdwv328/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/vmhdwv328/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/vmhdwv328/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/vmhdwv328/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/vmhdwv328/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/vmhdwv328/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vmhdwv328/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vmhdwv328/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/vmhdwv328/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/vmhdwv328/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/vmhdwv328/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>高县观音山遭非法大兴土木  将强拆送办</h2>
 
 <h6></h6>
@@ -13,41 +13,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/7/1/30/n1607350.md#1">整建宝藏岩  北市公权力封屋顺利净空</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11974000.md#1">罢免韩国瑜案 民调︰近6成投同意票</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11973998.md#1">武汉解封 政院：台商须注记搭包机</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11973943.md#1">指挥中心：加强管理 防范医疗机构群聚感染</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11973947.md#1">口罩量增加仍需排队购买？ 经济部：可网购</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11973803.md#1">持TVBS股份逾3成无实权？NCC吁丁广鋐说明</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11973827.md#1">武汉台人返国中央不同调 立委：提升指挥官层级</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11973794.md#1">大专院校受疫情冲击 教育部提4亿纾困</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11973796.md#1">东奥延期一年 台体育署：加强心理辅导</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11973708.md#1">湖北解封北京却拒入境 专家：中共“零确诊”说法有问题</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/1/30/n1607350.md#1">整建宝藏岩  北市公权力封屋顺利净空</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753544.md#1">儿权讲师长期性骚扰儿少 台少盟呼吁严查</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753546.md#1">时力再推5人角逐大选 拼提名50席议员参选人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753494.md#1">斯洛伐克来访 民进党：感谢斯国会支持台湾</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753495.md#1">东欧民众未意识中共威胁 对台湾议题分歧</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753539.md#1">异国恋诈骗 台北市刑大吁：见面再谈汇钱免谈</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753517.md#1">中资水龙头渗不停 台民团吁弹劾失职官员</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753492.md#1">斯洛伐克访团：台湾远比中共重要</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753479.md#1">欧洲禁运俄油 寻替代来源</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753474.md#1">台废弃物成长率超过GDP 环团提源头减量修法</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444846.md#1" target="_blank">夏祷：2019火种：天象巨变（1）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/19/n11266537.md#1" target="_blank">聋哑人能说话 瘫痪人迈双腿 亲历者忆神迹</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185925.md#1" target="_blank">名为开放实为开抢的邓小平理论 (下)</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/24/n11968465.md#1">【拍案惊奇】习近平有险？三峡大坝被爆危机</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/23/n11967780.md#1">【新闻看点】川习对话说啥 红二代倒戈习危急？</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/23/n11965551.md#1">分析：大疫之下中国两千万手机用户消失</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/23/n11968139.md#1">马列教授千里散毒？意首例确诊病例身份曝光</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/24/n11970524.md#1">台湾目前有4万多居家检疫者 双北市占近半数</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/23/n11965271.md#1">刘真惊传病逝 留下4岁女儿 享年44岁　</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/25/n11973180.md#1">辛龙憔悴赴灵堂 瞒着女儿说：妈妈去旅行了</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/23/n11966011.md#1">刘真44岁辞世 演艺圈好友不舍</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/22/n11964501.md#1">湖北病例零增长？台湾网红:中共谎言害惨世界</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/24/n11969412.md#1">刘真灵堂预计25日开放 追思会下月举行</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/22/n11962482.md#1">《推背图》第7象归序 谈庚子流年</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/22/n11964127.md#1">后悔或是一味良药 但须在大限前</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/17/n11945807.md#1">2020 否极泰来</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/2/27/n11900217.md#1">【历史上的瘟疫】“上帝之鞭”：欧洲黑死病</a></li>
-<li><a href="https://github.com/vmhdwv328/djy/blob/master/gb/20/3/14/n11939926.md#1">现世报：危机窥伺中得恩报 毫无预警下遭恶报</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752388.md#1">【财商天下】美欧看上 台湾会脱孤？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/vmhdwv328/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/vmhdwv328/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/7/4/10/n1673742.htm">高县观音山遭非法大兴土木  将强拆送办</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/7/4/10/n1673742.htm">高县观音山遭非法大兴土木  将强拆送办</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vmhdwv328/djy/blob/master/gb/7/4/10/n1673742.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/vmhdwv328/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/vmhdwv328/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/vmhdwv328/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/vmhdwv328/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vmhdwv328/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/7/4/10/n1673742.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
